# music-flask-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.envs/.local/: .localenv
.github/workflows/: flask.yml
musicapi/: app.py  config.py  dhelper.py  dummy_data.py  exceptions.py  filters.py  utils.py
musicapi/migrations/versions/: 05220f32d603_nullable_album_id.py  07f69502fe51_admin.py  0c411c023fdd_initial_migration.py  1373a46b6616_cascade.py  3133b1735067_datetime_to_date.py  67994bb283ca_user_admin.py  9690037018bc_.py  ef61f8251633_music_and_user_migration.py
musicapi/models/: __init__.py  music.py  user.py
musicapi/resources/: __init__.py  music.py  user.py
musicapi/resources/music/: __init__.py  albums.py  artist.py  songs.py
musicapi/schemas/: music.py  user.py
tests/: conftest.py
tests/music/: conftest.py  test_album_endpoint.py  test_artist_endpoint.py  test_hello.py  test_song_endpoint.py
tests/users/: conftest.py  test_endpoints.py  test_endpoints_invalid.py
