[metadata]
name = musicapi
version = 1.0.0
author = Sleiman Orocua
author_email = sleimanjose23@hotmail.com
description = Music flask api!
long_description = file: README.md
keywords = flask, api
license = GNU General Public License v3.0
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    Flask
    Flask-SQLAlchemy
    Flask-Migrate
    flask-marshmallow
    marshmallow-sqlalchemy
    flask-restful
    flask-jwt-extended
    psycopg2-binary
    environs